# physarum-qap

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure  generate_charts.py  generate_comparison.py  generate_comparisons.sh  recursiveInput.awk  runner_gen.rb  runner_gen_tsp.rb
data/qapdatsol/: bur26a.sln  nug27.sln  nug30.sln  readme  ste36c.sln  tho150.sln
data/tsplib/: a280.in  bays29.in  bays29.sln  berlin52.in  berlin52.sln  bier127.in  bier127.sln  ch130.in  ch130.sln  ch150.in  ch150.sln  d198.in  d198.sln  d657.in  eil101.in  eil101.sln  fl417.in  in10.in  in11.in  in12.in  in13.in  in6.in  in8.in  in9.in  kroB200.in  pr152.in  pr152.sln  pr226.in  pr226.sln  st70.in  st70.sln  swiss42.in  swiss42.sln
doc/: Makefile  abstract.tex  acknowledgements.tex  alg.md  bibliography.bib  ppfcmthesis.cls  results.csv  resultsdist.csv  thesis.aux  thesis.bbl  thesis.blg  thesis.out  thesis.tex  thesis.toc  thesis_flat.tex
doc/chapters/: algorithm.tex  background.tex  conclusion.tex  introduction.tex  physarum.tex  project.tex  qap.tex
doc/figures/: bar.eps  foo.eps
results/: lipa.csv  lipa20b.sln  lipa30b.sln  lipa40a.sln  lipa40b.sln  lipa50a.sln  lipa50b.sln  lipa60a.sln  lipa60b.sln  lipa70a.sln  lipa70b.sln  lipa80a.sln  lipa80b.sln  lipa90a.sln  lipa90b.sln
results/crawl/: lipa90a $E_{crawl}=0.00001$  lipa90a $E_{crawl}=0.0001$  lipa90a $E_{crawl}=0.001$  lipa90a $E_{crawl}=0.01$  lipa90a $E_{crawl}=0.1$
results/death/: lipa20a $E_{crawl}=0.45$ $E_{explore}=0.5$  lipa20a $E_{crawl}=0.49$ $E_{explore}=0.5$  lipa20a $E_{crawl}=0.6$ $E_{explore}=0.5$
results/energy/: lipa20a $E_{explore}=0.01$ $E_{crawl}=0.001$.REMOVED.git-id  lipa20a $E_{explore}=0.1$ $E_{crawl}=0.001$.REMOVED.git-id
results/explore/: lipa90a $E_{explore}=0.00001$  lipa90a $E_{explore}=0.0001$  lipa90a $E_{explore}=0.001$  lipa90a $E_{explore}=0.1$.REMOVED.git-id
results/initial90/: lipa90a $E_{initial}=0.0$  lipa90a $E_{initial}=0.1$  lipa90a $E_{initial}=0.5$  lipa90a $E_{initial}=1.0$  lipa90a $E_{initial}=10.0$  lipa90a $E_{initial}=5.0$
results/lipa_original/: lipa20a.sln  lipa30a.sln  lipa60a.sln  lipa80a.sln  lipa90a.sln
results/random/: random $E_{crawl}=0.001$ $E_{explore}=0.5$
results/single/: lipa20a.t300.l10.k30.s1337.sln  lipa90a t=300, l=10, k=30  lipa90a.t300.l10.k30.s1337.sln
results/tai/: tai150b $l=10$ $k=3000000$  (+1 more)
src/apps/: CMakeLists.txt  physarum.cpp  physarum_tsp.cpp
src/qap/: problem.cpp  (+12 more)
(+4366 files in other folders)
